# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  kassapaate_test.py.save  maksukortti_test.py
laskarit/viikko3/: monopolikaavio.md
src/: index.py  objects.py  repositories.py
src/classes/: objects.py
src/data/: users.csv
src/data/crosswords/published/: moi.txt
src/entities/: crosswords.py  repositories.py  user.py
src/functions/: after_login.py  menu.py  using_crosswords.py
src/functions/data/crosswords/published/: paavo.txt
src/functions/data/crosswords/saved/: paavo.txt
src/tests/: crossword_test.py  tests_test.py  user_test.py
