[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Paavo Ahola <paavo.ahola@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13.5"
autopep8 = "^1.6.0"
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
